feat(movimentacao): adiciona módulo completo com leitura e registo de movimentações